--- a/internal/components/autosplash/autosplash.css
+++ b/internal/components/autosplash/autosplash.css
@@ -1,4 +1,4 @@
-.splash-inner {
+body {
     background-image: url(public/media/gift.jpg);
     background-size: cover;
     background-position: center;
