--- a/internal/components/autosplash/autosplash.css
+++ b/internal/components/autosplash/autosplash.css
@@ -1,21 +1,27 @@
-.splash-inner {
+.autosplash-img {
     background-image: url(public/media/gift.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
+    position: fixed;
+    z-index: -10019;
+    width: 100%;
+}
+
+.splash-inner {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    margin: 1em;
 }
 
 .splash-logo {
-    font-size: 10em;
+    font-size: min(20vw, 150px);
     font-weight: bold;
     color: seashell;
     animation: 1500ms linear scalein;
-    margin: 1em;
 }
 
 @keyframes scalein {
