--- a/internal/components/autosplash/autosplash.html
+++ b/internal/components/autosplash/autosplash.html
@@ -1,6 +1,7 @@
 <div class="section-outer autosplash-outer">
+  <div class="autosplash-img"></div>
   <div class="splash-inner">
-    <div class="splash-logo">{{.AppName}}</div>
+    <div class="splash-logo">Mystery<br>Gift</div>
   </div>
 <style>{{ template "autosplash.css" }}</style>
 <script>{{ template "autosplash.js"}}</script>
