--- a/internal/shared/head/head.css
+++ b/internal/shared/head/head.css
@@ -1,5 +1,5 @@
 :root {
-    --html-bg: hsl(44.86deg 11.08% 77.82%);
+  --html-bg: hsl(44.86deg 11.08% 77.82%);
 }
 * {
   padding: 0;
@@ -8,9 +8,27 @@
 body, html {
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body {
+  background-image: url(public/media/gift.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  position: fixed;
+  z-index: -10019;
+  align-items: center;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
+  width: 100%;
 }
+.main-outer {
+     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
 @media screen and (orientation:portrait) {}
 @media screen and (orientation:landscape) {}
