--- a/internal/shared/head/head.css
+++ b/internal/shared/head/head.css
@@ -26,7 +26,7 @@ body {
      height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 
