--- a/internal/shared/head/head.css
+++ b/internal/shared/head/head.css
@@ -10,23 +10,28 @@ body, html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body {
-  background-image: url(public/media/gift.jpg);
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  position: fixed;
-  z-index: -10019;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  width: 100%;
+    background-image: url(public/media/gift.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    position: fixed;
+    z-index: -10019;
+    align-items: left;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
+    align-content: center;
+    justify-content: flex-start;
 }
 .main-outer {
-     height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    max-width: 55ch;
+    margin: 1em 1em 1em 1em;
+    align-items: flex-start;
 }
 
 
