--- a/internal/components/autosplash/autosplash.css
+++ b/internal/components/autosplash/autosplash.css
@@ -1,21 +1,14 @@
-.splash-inner {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: flex-start;
-}
-
 .splash-logo {
-    font-size: min(20vw, 150px);
-    font-weight: bold;
+    font-size: min(20vw, 142px);
+    font-weight: 900;
     color: seashell;
     animation: 1500ms linear scalein;
     text-shadow: 0px 0px 19px #272727;
+    text-align: right;
 }
 
 @keyframes scalein {
   0% {transform: scale(5) rotate(320deg); opacity: 0}
-  50% {transform: scale(0.5) rotate(0deg);}
+  50% {transform: scale(0.1) rotate(0deg);}
   100% {transform: scale(1);}
 }
