--- a/internal/components/qr/qr.css
+++ b/internal/components/qr/qr.css
@@ -5,7 +5,7 @@
 
 .qr-svg {
     background-color: #008588;
-    padding: 0.6em;
+    padding: 3%;
     border-radius: 0.9em;
     backdrop-filter: blur(10px);
     box-shadow: 0 0 54px -10px #ffffff;
