--- a/internal/shared/head/head.css
+++ b/internal/shared/head/head.css
@@ -10,18 +10,23 @@ body, html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body {
-    background-image: url(public/media/gift.jpg);
-    background-size: cover;
-    background-position: center;
-    position: fixed;
-    z-index: -10019;
     display: flex;
     /* align-items: left; */
     flex-direction: column;
     flex-wrap: nowrap;
     width: 100%;
+    height:150%;
     align-content: center;
     justify-content: flex-start;
+}
+.bg {
+    background-image: url(public/media/gift.jpg);
+    background-size: cover;
+    background-position: center;
+    position: fixed;
+    z-index: -10019;
+    height: 100%;
+    width: 100%;
 }
 .main-outer {
     height: 100%;
@@ -29,8 +34,7 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     max-width: 55ch;
-    align-items: flex-end;
-margin: 0em 2em 2em 2em;
+    margin: 1em 2em 2em 2em;
 }
 
 
